Fix bug CSRF token Swagger
