# resources/views/livewire/layout/navigation.blade.php
@@ -39,6 +39,11 @@ new class extends Component
                         {{ __('Empresas') }}
                     </x-nav-link>
                 </div>
+                <div class="hidden space-x-8 sm:-my-px sm:ms-10 sm:flex">
+                    <x-nav-link :href="route('employees.index')" :active="request()->routeIs('employees.index')" wire:navigate>
+                        {{ __('Empleados') }}
+                    </x-nav-link>
+                </div>
             </div>
 
             <!-- Settings Dropdown -->
